jenkins/deployment-jenkins.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-master
  namespace: jenkins-master
spec:
  replicas: 1
  selector:
    matchLabels:
      jenkins: master
  template:
    metadata:
      labels:
        jenkins: master
    spec:
      nodeName: devon
      securityContext:
        fsGroup: 1002
        runAsUser: 1002
      serviceAccountName: jenkins-admin
      containers:
        - name: jenkins
          image: jenkins/jenkins:2.530-jdk21
          resources:
            limits:
              memory: "26Gi"
              cpu: "10"
            requests:
              memory: "26Gi"
              cpu: "8"
          ports:
            - name: httpport
              containerPort: 8080
            - name: jnlpport
              containerPort: 7777
          volumeMounts:
            - name: jenkins-data
              mountPath: /var/jenkins_home/
      volumes:
        - name: jenkins-data
          persistentVolumeClaim:
            claimName: task-pv-claim-jenkins
