jenkins/service-jenkins.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: jenkins-master
spec:
  selector: 
    app: jenkins-server
  type: LoadBalancer  
  ports:
    - name: jenkins-port-http
      port: 8080
      targetPort: 8080
      nodePort: 30082
    - name: jenkins-port-jnlp
      port: 7777
      targetPort: 7777
      nodePort: 30077
